--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.13.0/mapbox-gl.css' rel='stylesheet' />
 
 
-    <title>Popeye's maps</title>
+    <title>Empty Proj</title>
 </head>
 
 <body>
